--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3 bg-light pt-3 pb-3">
+            <div id="city-list" class="col-lg-3 bg-light pt-3 pb-3">
                 <h3>Demand A City:</h3>
                 <form id="city-form">
                     <input id="search-city" type="text" class="form-control" placeholder="City">
@@ -31,9 +31,11 @@
         </div>
     </div>
     <div class="container-fluid">
-        <div class="row">
-        <h2></h2>
-        </div>
+        <div class="city"></div>
+        <div class="temp"></div>
+        <div class="wind"></div>
+        <div class="humidity"></div>
+        <div class="uv-index"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
