--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
             <h1 class="text-center text-white">Weather On Demand</h1>
         </div>
     </div>
+
     <div class="container-fluid">
         <div class="row">
             <div id="city-list" class="col-md-3 bg-light pt-3 pb-3">
-                <h3>Demand A City:</h3>
+                <h4>Demand A City:</h4>
                 <form id="city-form">
                     <input id="search-city" type="text" class="form-control" placeholder="City">
                     <button id="find-btn" class="btn btn-primary" type="submit">Demand</button>
                 </form>
                 <ul class="city-history"></ul>
             </div>
-            <div id="city-info" class="col-md-9 bg-light pt-3 pb-3">
-                <div class="card" style="width: 28rem;">
+            <div id="city-info" class="col-md-9 bg-light">
+                <div class="card" style="width: 48rem;">
                     <ul class="list-group list-group-flush">
                         <div class="city-card">
                             <div class="city"></div>
@@ -42,12 +43,17 @@
                 </div>
             </div>
         </div>
+        <div class="mt-4 col-md-12">
+            <h4 id="forecast-head" class="mt-3 hide show">
+                5 Day Forecast
+            </h4>
+            <div id="forecast" class="row">
+            </div>
+        </div>
     </div>
-    </div>
-    <div class="container-fluid">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src="./script.js"></script>
 </body>
-
 </html>
