adds forecast cards and axios cdn

--- a/index.html
+++ b/index.html
@@ -47,13 +47,19 @@
             <h4 id="forecast-head" class="mt-3 hide show">
                 5 Day Forecast
             </h4>
-            <div id="forecast" class="row">
-            </div>
+            <div class="row">
+                <div class="col forecast bg-primary text-white ml-2 mb-2">five</div>
+                <div class="col forecast bg-primary text-white ml-2 mb-2">day</div>
+                <div class="col forecast bg-primary text-white ml-2 mb-2">forecast</div>
+                <div class="col forecast bg-primary text-white ml-2 mb-2">goes</div>
+                <div class="col forecast bg-primary text-white ml-2 mb-2">here</div>
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-        <script src="./script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./script.js"></script>
+        
 </body>
 </html>
