adds uv-index style

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="temp"></div>
                         <div class="wind"></div>
                         <div class="humidity"></div>
-                        <div class="uv-index"></div>
+                        <div class="uv-index" style="width: 8rem;"></div>
                     </ul>
                 </div>
             </div>
@@ -58,7 +58,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./script.js"></script>
         
 </body>
