--- a/index.html
+++ b/index.html
@@ -29,37 +29,35 @@
                 <ul class="city-history"></ul>
             </div>
             <div id="city-info" class="col-md-9 bg-light">
-                <div class="card" style="width: 48rem;">
-                    <ul class="list-group list-group-flush">
-                        <div class="city-card">
-                            <div class="city"></div>
-                            <img id="icon">
-                        </div>
-                        <div class="temp"></div>
-                        <div class="wind"></div>
-                        <div class="humidity"></div>
-                        <div class="uv-index" style="width: 8rem;"></div>
-                    </ul>
+                <div class="row" id="main-card">
+                    <div class="card" style="width: 48rem;">
+                        <ul class="list-group list-group-flush">
+                            <div class="city-card">
+                                <div class="city"></div>
+                                <img id="icon">
+                            </div>
+                            <div class="temp"></div>
+                            <div class="wind"></div>
+                            <div class="humidity"></div>
+                            <div class="uv-index" style="width: 8rem;"></div>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="mt-4 col-md-12">
-            <h4 id="forecast-head" class="mt-3 hide show">
-                5 Day Forecast
-            </h4>
-            <div class="row">
-                <div class="col forecast bg-primary text-white ml-2 mb-2">five</div>
-                <div class="col forecast bg-primary text-white ml-2 mb-2">day</div>
-                <div class="col forecast bg-primary text-white ml-2 mb-2">forecast</div>
-                <div class="col forecast bg-primary text-white ml-2 mb-2">goes</div>
-                <div class="col forecast bg-primary text-white ml-2 mb-2">here</div>
-        </div>
-    </div>
+                <div class="row mt-7 col-md-12">
+                        <div class="row" id="forecast-title"></div>
+                        <div class="row" id="forecast-cards"></div>
+                </div>
+               
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./script.js"></script>
-        
+            </div>
+
+        </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="./script.js"></script>
+
 </body>
+
 </html>
