adds firecast class to row

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="row mt-7 col-md-12">
+                <div class="row forecast mt-7 col-md-12">
                         <div class="row" id="forecast-title"></div>
                         <div class="row" id="forecast-cards"></div>
                 </div>
